# shellagent

./: .gitignore  INSTALLATION.md  PLAN.md  README.md  STEPS.md  setup.sh  shellagent.plugin.zsh  shellagent.sh
config/: config.example.yaml
daemon/: README.md  com.shell-assistant.daemon.plist  pyproject.toml  shell-assistant.service
daemon/shell_assistant/: __init__.py  cli.py  config.py  llm_client.py  safety.py  server.py
daemon/shell_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
daemon/tests/: run_all_tests.sh  test_complete.sh  test_errors.sh  test_health.sh
